Tries to fix overflow issue on mobile

--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -9,6 +9,7 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: 'Courier New', Courier, monospace;
+  overflow-x:hidden;
 }
 
 .container {
